@@ -1,4 +1,9 @@
+# douban_single
+# 运行配置
+1. java.version=11
+1. vm=--add-opens java.base/java.lang=ALL-UNNAMED
+
 # 其他项目
 1. 豆瓣web单机项目：https://github.com/bfdesm/douban
 1. 豆瓣webdubbo分布式项目: https://github.com/bfdesm/duoban_dubbo
-1. 豆瓣webspringcloud分布式项目: https://github.com/bfdesm/douban_springcloud(正在完善中,还未完善结束)
+1. 豆瓣webspringcloud分布式项目: https://github.com/bfdesm/douban_springcloud
